--- a/Suaah/Areas/Customer/Views/HotelBookings/Edit.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/Edit.cshtml
@@ -50,7 +50,7 @@
                 </div>
             }
             <div class="form-group m-3 p-3">
-                <input type="submit" value="Save" class="btn btn-primary" /> ||  <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
+                <input type="submit" value="Save" class="btn btn-primary" /> ||  <a asp-action="PendingReservation" class="btn btn-outline-primary">Back to List</a>
             </div>
         </form>
     </div>
