--- a/Suaah/Areas/Admin/Views/Hotels/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Hotels/Index.cshtml
@@ -81,7 +81,7 @@
 
     </div>
     <div>
-        <input type="submit" value="-  Search  -" class="btn btn-outline-danger p-2 " style="width:100%" onclick="go();"/>@*////////////*@
+        <input type="submit" value="-  Search  -" class="btn btn-outline-danger p-2 " style="width:100%"/> 
     </div>
     <br />
 </form>
