--- a/Suaah/Areas/Customer/Views/HotelBookings/Summary.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/Summary.cshtml
@@ -74,7 +74,7 @@
                                 <li class="list-group-item d-flex justify-content-between">
                                     <div>
                                         <h5 class="my-0 text-danger d-inline">Room, Hotel: </h5>
-                                        <small class="text-black mx-5">@item.HoteRoom.Description@*@item.HoteRoom.Type*@, @item.HoteRoom.Hotel.Name</small>
+                                        <small class="text-black mx-5">@item.HoteRoom.Description, @item.HoteRoom.Hotel.Name</small>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between">
